@startuml

title __MODEL's Class Diagram__\n

  package model {
    class Room {
        {static} + TYPE_SYSTEM : String
        {static} + TYPE_GROUP : String
        {static} + TYPE_PRIVATE : String
        - id : String
        - name : String
        - type : String
        - members : List<User>
        - messages : List<Message>
        + Room()
        + Room()
        + addMessage()
        + getMinified()
        + getId()
        + getName()
        + getType()
        + getMembers()
        + getMessages()
    }
  }
  

  package model {
    class RoomMinified {
        - idRoom : String
        - nameRoom : String
        - typeRoom : String
        - membersRoom : List<String>
        + RoomMinified()
        + RoomMinified()
        + getIdRoom()
        + getNameRoom()
        + getTypeRoom()
        + getMembersRoom()
    }
  }
  

  package model {
    interface RoomRepository {
    }
  }
  

  package model {
    class User {
        {static} + SUPER : String
        {static} + NORMAL : String
        - id : String
        - name : String
        - type : String
        - rooms : List<RoomMinified>
        + User()
        + User()
        + addRoom()
        + getId()
        + getName()
        + getType()
        + getRooms()
    }
  }
  

  package model {
    class UserLoader {
        - logger : Logger
        + run()
    }
  }
  

  package model {
    interface UserRepository {
        {abstract} + findByIdIn()
        {abstract} + findByName()
    }
  }
  

  UserLoader -up-|> CommandLineRunner
  UserLoader o-- UserRepository : users
  UserLoader o-- RoomRepository : rooms
  UserLoader o-- MessagingController : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
